--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,20 @@
   "main": "dist/index.js",
   "scripts": {
     "serve": "tsc-watch --onSuccess 'node dist/index.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-mocha './src/tests/**/*.spec.ts' --exit"
   },
   "author": "Rob",
   "license": "ISC",
+  "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.0",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "sinon": "^14.0.1"
+  },
   "dependencies": {
     "express": "^4.18.1",
+    "ts-mocha": "^10.0.0",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.8.4"
   }
