--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.3",
+    "@types/express": "^4.17.14",
     "@types/mocha": "^10.0.0",
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
     "sinon": "^14.0.1"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "ts-mocha": "^10.0.0",
     "tsc-watch": "^5.0.3",
