Daniel Chen fixed bugs in add_quizzes. This is first commit

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "The backend of the performance task.",
   "main": "dist/index.js",
   "scripts": {
-    "serve": "tsc-watch --onSuccess 'node dist/index.js'",
+    "serve": "tsc-watch --onSuccess \"node dist/index.js\"",
     "test": "ts-mocha './src/tests/**/*.spec.ts' --exit"
   },
   "author": "Rob",
